# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: my-check.yml
gendiff/: __init__.py  cli.py  constant.py  constants.py  diff.py  diff_tree.py  formatter.py  parser.py
gendiff/formatter/: __init__.py  formatter.py  json.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  constants.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_flat.py  test_formatter.py  test_nested.py  test_parser.py  test_unsup_format.py  utils.py
tests/fixtures/: data_diff.py  data_file.py  data_formatter.py  data_read_file.py  file2.yaml  file2_1.yaml  file2_2.yaml
tests/fixtures/nested/: file1.json  file1.yaml
tests/fixtures/results/: flat_json  nested_json  nested_plain  nested_stylish
